Corrects when/where mixup for testing location/date prompts. Fixes misspellings, adds some missing translations. Removes "If so..." text before prompts to which the user has previously said "yes".

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -16,21 +16,21 @@ en:
   birthyear: "Year of Birth"
   zip: "Postal code"
   other: "other"
-  phoneDigits: "Letzte vier Ziffern Ihrer Telefonnummer"
-  feelsHealthy: "From the best of your knowledge right now, do you feel healthy?"
+  phoneDigits: "Last four digits of your phone number"
+  feelsHealthy: "To the best of your knowledge right now, do you feel healthy?"
   hasBeenTested: "Have you been tested for COVID-19?"
-  whereTested: "If so, when have you been tested?"
-  whenTested: "If yes, where have you been tested?"
+  whereTested: "Where were you tested?"
+  whenTested: "When were you tested?"
   worksInHealth: "Do you work with patients in the healthcare system?"
   wasAbroad: "Have you been abroad in the last 14 days?"
   wasInContactWithCase: "Have you been in physical proximity with someone who has been diagnosed with COVID-19?"
-  dateContacted: "If so, when?"
+  dateContacted: "When?"
   chronicCondition: "Do you suffer from a chronic illness?"
   fever: "Fever above 38 Degrees"
   coughing: "Coughing"
   dyspnea: "Respiratory problems"
   tiredness: "Tiredness"
-  throat: "Soar throat"
+  throat: "Sore throat"
   yesAnswer: "Yes"
   noAnswer: "No"
   maybe: "I think so"
@@ -58,8 +58,8 @@ en:
   technology: "Tech"
   supportedBy: "In cooperation with"
   pressRelease: "Press release Canton of Bern"
-  phoneInfo: "Wird benötigt, um Missbräuche zu verhindern sowie Daten von Personen, die den Fragebogen mehrmals ausfüllen, einander zuzuordnen."
-  testResult: "If yes, what was the result?"
+  phoneInfo: "Required to prevent misuse and to correlate data from people who fill out the questionnaire several times."
+  testResult: "What was the result?"
   positive: "Positive"
   negative: "Negative"
   dataProtection: "Data protection"
