--- a/locales/fr.yml
+++ b/locales/fr.yml
@@ -1,73 +1,123 @@
 ---
-  fr:
-    url: "https://www.covidtracker.ch/fr"
-    title: "COVID-19-Tracking Suisse"
-    description: "Sauve des vies à l’aide du tracker COVID-19."
-    introduction: "<p>Le coronavirus se propage en Europe à une vitesse vertigineuse.</p>
+fr:
+  url: "https://www.covidtracker.ch/fr"
+  title: "COVID-19-Tracking Suisse"
+  description: "Sauve des vies à l’aide du tracker COVID-19."
+  introduction: "<p>Le coronavirus se propage en Europe à une vitesse vertigineuse.</p>
     <p>Pour enrayer la maladie, les cas suspects doivent être identifiés le plus tôt possible. C’est l’objectif de la présente campagne.</p>
     <p><b>Que vous soyez malade ou en bonne santé, infecté-e ou non : Vos données peuvent aider à sauver des vies.</b> En remplissant le formulaire ci-dessous, vous participez à l’effort commun pour venir à bout de cette crise. L’idéal serait que vous renouveliez votre participation chaque semaine.</p>
     <p>Important: les données récoltées sont anonyme et ne peuvent pas être associées à des personnes.</p>"
-    toform: "Vers le formulaire"
-    firstTimeForm: "C'est la première fois que vous remplissez ce formulaire?"
-    participantCode: "(Optionnel) Votre code de participation d'avant"
-    manualParticipantCode: "(Optionnel) Entrez votre code de participation"
-    unlistedCode: "Mon code n'est pas répertorié"
-    sex: "Sexe"
-    male: "Homme"
-    female: "Femme"
-    noinformation: "Aucune information"
-    age: "Age"
-    birthyear: "Année de naissance"
-    zip: "Code postal"
-    other: "Autres"
-    phoneDigits: "Les quatre derniers chiffres de votre numéro de téléphone"
-    feelsHealthy: "Êtes-vous en bonne santé ?"
-    hasBeenTested: "Avez-vous été testé pour le covid-19 ?"
-    whereTested: "Si oui: où ?"
-    whenTested: "Si oui: quand ?"
-    worksInHealth: "Travaillez-vous dans le système de santé avec des patients ?"
-    wasAbroad: "Avez-vous été à l’étranger durant ces 14 derniers jours ?"
-    wasInContactWithCase: "Avez-vous été en contact avec un cas positif pour le covid-19 ?"
-    dateContacted: "Si oui, quand étiez-vous en contact ?"
-    chronicCondition: "Souffrez-vous d’une affection chronique ?"
+  toform: "Vers le formulaire"
+  firstTimeForm: "C'est la première fois que vous remplissez ce formulaire?"
+  participantCode: "(Optionnel) Votre code de participation d'avant"
+  manualParticipantCode: "(Optionnel) Entrez votre code de participation"
+  unlistedCode: "Mon code n'est pas répertorié"
+  sex: "Sexe"
+  male: "Homme"
+  female: "Femme"
+  noinformation: "Aucune information"
+  age: "Age"
+  birthyear: "Année de naissance"
+  zip: "Code postal"
+  other: "Autres"
+  householdSize: "Size of your household"
+  phoneDigits: "Les quatre derniers chiffres de votre numéro de téléphone"
+  feelsHealthy: "Êtes-vous en bonne santé ?"
+  hasBeenTested: "Avez-vous été testé pour le covid-19 ?"
+  whereTested: "Si oui: où ?"
+  whenTested: "Si oui: quand ?"
+  worksInHealth: "Travaillez-vous dans le système de santé avec des patients ?"
+  wasAbroad: "Avez-vous été à l’étranger durant ces 14 derniers jours ?"
+  wasInContactWithCase: "Avez-vous été en contact avec un cas positif pour le covid-19 ?"
+  dateContacted: "Si oui, quand étiez-vous en contact ?"
+  yesAnswer: "Yes"
+  probablyAnswer: "Probably"
+  noAnswer: "No"
+  notKnownAnswer: "Not that I know of"
+  maybe: "Probablement"
+  hospital: "Hôpital"
+  privatePractice: "Pratique privée"
+  ems: "EMS"
+  italy: "Italie"
+  spain: "Espagne"
+  germany: "Allemagne"
+  france: "France"
+  followingSymptoms: "Souffrez-vous actuellement des symptômes suivants:"
+  sendForm: "Soumettre le formulaire"
+  sinceHowManyDays: "Pour combien de jours ?"
+  partners: "Partenaires"
+  implementation: "Réalisation"
+  imprint: "Mentions obligatoires"
+  seemore: "En savoir plus"
+  shareon: "Partager sur"
+  shareby: "Partager par"
+  press: "Presse"
+  generalinfo: "Informations générales"
+  technology: "Technologie"
+  supportedBy: "Soutenu par"
+  pressRelease: "Communiqué de presse du canton de Berne"
+  pressReleaseLink: "https://www.be.ch/portal/fr/index/mediencenter/medienmitteilungen.meldungNeu.html/portal/fr/meldungen/mm/2020/03/20200326_1115_gruppe_von_jungenforschernstartetlandesweitgeografischedatensamm"
+  phoneInfo: "Wird benötigt, um Missbräuche zu verhindern sowie Daten von Personen, die den Fragebogen mehrmals ausfüllen, einander zuzuordnen."
+  testResult: "Si oui, quel a été le résultat de votre test?"
+  positive: "Positif"
+  negative: "Négatif"
+  dataProtection: "Protection des données"
+  saveResponses: "Rappelez-vous mes réponses pour la prochaine fois."
+  cookieWarning: "Si vous sélectionnez 'oui', vous consentez à l'utilisation de cookies. Lors de l'utilisation de cookies, d'autres utilisateurs qui ont accès à cet ordinateur peuvent être en mesure de récupérer les réponses à l'enquête."
+  consentToStudy: "J'accepte les <a href=\"/fr/consent.html\" target=\"_blank\"> conditions de participation </a> à cette étude"
+
+  symptoms:
     fever: "Fièvre de plus de 38 degrés"
     coughing: "Toux"
     dyspnea: "Difficultés respiratoires"
     tiredness: "Grande fatigue"
     throat: "Maux de gorge"
-    yesAnswer: "Oui"
-    noAnswer: "Non"
-    maybe: "Probablement"
-    hospital: "Hôpital"
-    privatePractice: "Pratique privée"
-    ems: "EMS"
-    italy: "Italie"
-    spain: "Espagne"
-    germany: "Allemagne"
-    france: "France"
-    heart: "Affection cardiaque"
-    lung: "Pulmonaire"
-    diabetes: "Diabète"
-    followingSymptoms: "Souffrez-vous actuellement des symptômes suivants:"
-    sendForm: "Soumettre le formulaire"
-    sinceHowManyDays: "Pour combien de jours ?"
-    partners: "Partenaires"
-    implementation: "Réalisation"
-    imprint: "Mentions obligatoires"
-    seemore: "En savoir plus"
-    shareon: "Partager sur"
-    shareby: "Partager par"
-    press: "Presse"
-    generalinfo: "Informations générales"
-    technology: "Technologie"
-    supportedBy: "Soutenu par"
-    pressRelease: "Communiqué de presse du canton de Berne"
-    pressReleaseLink: "https://www.be.ch/portal/fr/index/mediencenter/medienmitteilungen.meldungNeu.html/portal/fr/meldungen/mm/2020/03/20200326_1115_gruppe_von_jungenforschernstartetlandesweitgeografischedatensamm"
-    phoneInfo: "Wird benötigt, um Missbräuche zu verhindern sowie Daten von Personen, die den Fragebogen mehrmals ausfüllen, einander zuzuordnen."
-    testResult: "Si oui, quel a été le résultat de votre test?"
-    positive: "Positif"
-    negative: "Négatif"
-    dataProtection: "Protection des données"
-    saveResponses: "Rappelez-vous mes réponses pour la prochaine fois."
-    cookieWarning: "Si vous sélectionnez 'oui', vous consentez à l'utilisation de cookies. Lors de l'utilisation de cookies, d'autres utilisateurs qui ont accès à cet ordinateur peuvent être en mesure de récupérer les réponses à l'enquête."
-    consentToStudy: "J'accepte les <a href=\"/fr/consent.html\" target=\"_blank\"> conditions de participation </a> à cette étude"
+    nausea: "Nausea"
+    headache: "Headache"
+    musclePain: "Muscle Pain"
+    runnyNose: "Runny Nose"
+    diarrhea: "Diarrhea"
+    lostTaste: "Loss of smell or taste"
+
+  comorbiditiesPrompt: "Comorbidities (Check all that apply)"
+  showMoreComorbidities: "show more..."
+  hideMoreComorbidities: "hide more"
+  comorbidities:
+    main:
+      highBloodPressure: "High Blood Pressure"
+      diabetes1: "Diabetes (Type 1)"
+      diabetes2: "Diabetes (Type 2)"
+      obesity: "Obesity"
+      pregnancy: "Currently pregnant"
+      immuneSystem: "Weakened immune system or on immunosuppressants (Cancer patient currently undergoing chemo/radiotherapy)"
+    extended:
+      bloodCancer: "Blood cancer patient (such as leukemia) at any stage of treatment"
+      hiv: "HIV/AIDS"
+      spleen: "Chronic spleen disease (i.e., sickle cell disease or spleen removed)"
+      kidney: "Chronic kidney disease"
+      heartDisease: "Long-term heart disease, like heart failure."
+      liver: "Chronic liver disease (i.e., hepatitis)"
+      respiratory: "Chronic respiratory disease (i.e., COPD, asthma, emphysema, bronchitis, cystic fibrosis.)"
+      neurological: "Chronic neurological disease (i.e., Parkinson’s disease, motor neuron disease, multiple sclerosis or cerebral palsy)"
+      organTranslplant: "I've had an organ transplant"
+
+  smokeOrVape: "Do you smoke or vape?"
+
+  leavingHomeForWork: "Are you currently leaving your home for work?"
+
+  behaviorPrompt: "Please select the option that most resembles your current situation:"
+  behaviors:
+    isolation:
+      label: "Isolation"
+      subtext: "Presumed sick. Not leaving home."
+    self_isolation:
+      label: "Self-Isolation"
+      subtext: "Do not have symptoms, but I may have been exposed. Not Leaving home."
+    precaution_isolation:
+      label: "Precautionary Self-Isolation"
+      subtext: "No known exposure but limiting all contacts. Only leaving for essential activities. For instance, shopping or pharmacy"
+    social_distancing:
+      label: "Social Distancing"
+      subtext: "No handshakes, keeping a distance from others"
+    typical_activity:
+      label: "Maintaining Typical Activities"
