--- a/locales/it.yml
+++ b/locales/it.yml
@@ -1,73 +1,123 @@
 ---
-  it:
-    url: "https://www.covidtracker.ch/it"
-    title: "Tracciamento del COVID-19 in Svizzera"
-    description: "Solo agendo insieme possiamo salvare vite! Aiutaci a proteggere persone particolarmente a rischio usando il Covid-19-Tracker."
-    introduction: "<p>La diffusione del coronavirus in Europa è molto rapida.</p>
-    <p>Per contrastare la malattia, i casi sospetti devono essere identificati il più presto possibile. È questo lo scopo della campagna.</p>
-    <p><b>Indipendentemente dal fatto che sia sano o ammalato, che sia infetto o meno: I suoi dati possono contribuire a salvare vite umane.</b> Con la compilazione del modulo sottostante, può fornire il suo contributo, affinché possiamo superare insieme questa crisi. L’ideale sarebbe poter partecipare a cadenza settimanale.</p>
-    <p>Importante: il rilevamento dei dati garantisce l’anonimato e non consente di trarre conclusioni sulla sua identità.</p>"
-    toform: "Al modulo"
-    firstTimeForm: "È la prima volta che compili questo modulo?"
-    participantCode: "(Opzionale) Il codice di partecipazione di prima"
-    manualParticipantCode: "(Opzionale) Inserisci il tuo codice di partecipazione"
-    unlistedCode: "Il mio codice non è elencato"
-    sex: "Sesso"
-    male: "Uomo"
-    female: "Donna"
-    noinformation: "Nessuna informazione"
-    age: "Età"
-    birthyear: "Anno di nascita"
-    zip: "Codice Postale"
-    other: "Altro"
-    phoneDigits: "Le ultime quattro cifre del vostro numero di telefono"
-    feelsHealthy: "Ti senti in salute?"
-    hasBeenTested: "Siete stati testati per covid-19?"
-    whereTested: "In caso di riscontro positivo, dove è stato eseguito il test?"
-    whenTested: "In caso di riscontro positivo, quando è stato eseguito il test?"
-    worksInHealth: "Lavora nel sistema sanitario con i pazienti?"
-    wasAbroad: "È stato all'estero negli ultimi 14 giorni?"
-    wasInContactWithCase: "Siete stati in contatto con un caso positivo di covide-19?"
-    dateContacted: "In caso di riscontro positivo, quando ha avuto il contatto?"
-    chronicCondition: "Soffre di una condizione cronica?"
+it:
+  url: "https://www.covidtracker.ch/it"
+  title: "Tracciamento del COVID-19 in Svizzera"
+  description: "Solo agendo insieme possiamo salvare vite! Aiutaci a proteggere persone particolarmente a rischio usando il Covid-19-Tracker."
+  introduction: "<p>La diffusione del coronavirus in Europa è molto rapida.</p>
+  <p>Per contrastare la malattia, i casi sospetti devono essere identificati il più presto possibile. È questo lo scopo della campagna.</p>
+  <p><b>Indipendentemente dal fatto che sia sano o ammalato, che sia infetto o meno: I suoi dati possono contribuire a salvare vite umane.</b> Con la compilazione del modulo sottostante, può fornire il suo contributo, affinché possiamo superare insieme questa crisi. L’ideale sarebbe poter partecipare a cadenza settimanale.</p>
+  <p>Importante: il rilevamento dei dati garantisce l’anonimato e non consente di trarre conclusioni sulla sua identità.</p>"
+  toform: "Al modulo"
+  firstTimeForm: "È la prima volta che compili questo modulo?"
+  participantCode: "(Opzionale) Il codice di partecipazione di prima"
+  manualParticipantCode: "(Opzionale) Inserisci il tuo codice di partecipazione"
+  unlistedCode: "Il mio codice non è elencato"
+  sex: "Sesso"
+  male: "Uomo"
+  female: "Donna"
+  noinformation: "Nessuna informazione"
+  age: "Età"
+  birthyear: "Anno di nascita"
+  zip: "Codice Postale"
+  other: "Altro"
+  householdSize: "Size of your household"
+  phoneDigits: "Le ultime quattro cifre del vostro numero di telefono"
+  feelsHealthy: "Ti senti in salute?"
+  hasBeenTested: "Siete stati testati per covid-19?"
+  whereTested: "In caso di riscontro positivo, dove è stato eseguito il test?"
+  whenTested: "In caso di riscontro positivo, quando è stato eseguito il test?"
+  worksInHealth: "Lavora nel sistema sanitario con i pazienti?"
+  wasAbroad: "È stato all'estero negli ultimi 14 giorni?"
+  wasInContactWithCase: "Siete stati in contatto con un caso positivo di covide-19?"
+  dateContacted: "In caso di riscontro positivo, quando ha avuto il contatto?"
+  yesAnswer: "Si"
+  probablyAnswer: "Probably"
+  noAnswer: "No"
+  notKnownAnswer: "Not that I know of"
+  maybe: "Probabilmente"
+  hospital: "Ospedale"
+  privatePractice: "Ambulatorio privato"
+  ems: "Centro medico-sociale"
+  italy: "Italia"
+  spain: "Spagna"
+  germany: "Germania"
+  france: "Francia"
+  followingSymptoms: "Attualmente soffre dei seguenti sintomi:"
+  sendForm: "Invia modulo"
+  sinceHowManyDays: "Quanti giorni?"
+  partners: "Partner"
+  implementation: "Attuazione"
+  imprint: "Note legali"
+  seemore: "Scopri di più"
+  shareon: "Condividi su"
+  shareby: "Condividi via"
+  press: "Stampa"
+  generalinfo: "Informazioni generali"
+  technology: "Tecnologia"
+  supportedBy: "Supportato da"
+  pressRelease: "Comunicato stampa del Canton Berna"
+  pressReleaseLink: "https://www.be.ch/portal/fr/index/mediencenter/medienmitteilungen.meldungNeu.html/portal/fr/meldungen/mm/2020/03/20200326_1115_gruppe_von_jungenforschernstartetlandesweitgeografischedatensamm"
+  phoneInfo: "Wird benötigt, um Missbräuche zu verhindern sowie Daten von Personen, die den Fragebogen mehrmals ausfüllen, einander zuzuordnen."
+  testResult: "Se sì, qual è stato il risultato?"
+  positive: "Positivo"
+  negative: "Negativo"
+  dataProtection: "Protezione dei dati"
+  saveResponses: "Ricorda le mie risposte per la prossima volta."
+  cookieWarning: "Se si seleziona 'sì', si acconsente all'utilizzo dei cookie. Quando si utilizzano i cookie, altri utenti che hanno accesso a questo computer potrebbero essere in grado di recuperare le risposte al sondaggio."
+  consentToStudy: "Acconsento ai <a href=\"/it/consent.html\" target=\"_blank\"> termini di partecipazione </a> in questo studio"
+
+  symptoms:
     fever: "Febbre oltre i 38 gradi"
     coughing: "Tosse"
     dyspnea: "Difficoltà di respirazione"
     tiredness: "Molto stanco"
     throat: "Mal di gola"
-    yesAnswer: "Si"
-    noAnswer: "No"
-    maybe: "Probabilmente"
-    hospital: "Ospedale"
-    privatePractice: "Ambulatorio privato"
-    ems: "Centro medico-sociale"
-    italy: "Italia"
-    spain: "Spagna"
-    germany: "Germania"
-    france: "Francia"
-    heart: "Cuore"
-    lung: "Polmoni"
-    diabetes: "Diabete"
-    followingSymptoms: "Attualmente soffre dei seguenti sintomi:"
-    sendForm: "Invia modulo"
-    sinceHowManyDays: "Quanti giorni?"
-    partners: "Partner"
-    implementation: "Attuazione"
-    imprint: "Note legali"
-    seemore: "Scopri di più"
-    shareon: "Condividi su"
-    shareby: "Condividi via"
-    press: "Stampa"
-    generalinfo: "Informazioni generali"
-    technology: "Tecnologia"
-    supportedBy: "Supportato da"
-    pressRelease: "Comunicato stampa del Canton Berna"
-    pressReleaseLink: "https://www.be.ch/portal/fr/index/mediencenter/medienmitteilungen.meldungNeu.html/portal/fr/meldungen/mm/2020/03/20200326_1115_gruppe_von_jungenforschernstartetlandesweitgeografischedatensamm"
-    phoneInfo: "Wird benötigt, um Missbräuche zu verhindern sowie Daten von Personen, die den Fragebogen mehrmals ausfüllen, einander zuzuordnen."
-    testResult: "Se sì, qual è stato il risultato?"
-    positive: "Positivo"
-    negative: "Negativo"
-    dataProtection: "Protezione dei dati"
-    saveResponses: "Ricorda le mie risposte per la prossima volta."
-    cookieWarning: "Se si seleziona 'sì', si acconsente all'utilizzo dei cookie. Quando si utilizzano i cookie, altri utenti che hanno accesso a questo computer potrebbero essere in grado di recuperare le risposte al sondaggio."
-    consentToStudy: "Acconsento ai <a href=\"/it/consent.html\" target=\"_blank\"> termini di partecipazione </a> in questo studio"
+    nausea: "Nausea"
+    headache: "Headache"
+    musclePain: "Muscle Pain"
+    runnyNose: "Runny Nose"
+    diarrhea: "Diarrhea"
+    lostTaste: "Loss of smell or taste"
+
+  comorbiditiesPrompt: "Comorbidities (Check all that apply)"
+  showMoreComorbidities: "show more..."
+  hideMoreComorbidities: "hide more"
+  comorbidities:
+    main:
+      highBloodPressure: "High Blood Pressure"
+      diabetes1: "Diabetes (Type 1)"
+      diabetes2: "Diabetes (Type 2)"
+      obesity: "Obesity"
+      pregnancy: "Currently pregnant"
+      immuneSystem: "Weakened immune system or on immunosuppressants (Cancer patient currently undergoing chemo/radiotherapy)"
+    extended:
+      bloodCancer: "Blood cancer patient (such as leukemia) at any stage of treatment"
+      hiv: "HIV/AIDS"
+      spleen: "Chronic spleen disease (i.e., sickle cell disease or spleen removed)"
+      kidney: "Chronic kidney disease"
+      heartDisease: "Long-term heart disease, like heart failure."
+      liver: "Chronic liver disease (i.e., hepatitis)"
+      respiratory: "Chronic respiratory disease (i.e., COPD, asthma, emphysema, bronchitis, cystic fibrosis.)"
+      neurological: "Chronic neurological disease (i.e., Parkinson’s disease, motor neuron disease, multiple sclerosis or cerebral palsy)"
+      organTranslplant: "I've had an organ transplant"
+
+  smokeOrVape: "Do you smoke or vape?"
+
+  leavingHomeForWork: "Are you currently leaving your home for work?"
+
+  behaviorPrompt: "Please select the option that most resembles your current situation:"
+  behaviors:
+    isolation:
+      label: "Isolation"
+      subtext: "Presumed sick. Not leaving home."
+    self_isolation:
+      label: "Self-Isolation"
+      subtext: "Do not have symptoms, but I may have been exposed. Not Leaving home."
+    precaution_isolation:
+      label: "Precautionary Self-Isolation"
+      subtext: "No known exposure but limiting all contacts. Only leaving for essential activities. For instance, shopping or pharmacy"
+    social_distancing:
+      label: "Social Distancing"
+      subtext: "No handshakes, keeping a distance from others"
+    typical_activity:
+      label: "Maintaining Typical Activities"
